--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
       </div>
       <div class="extra">
         <p>Don't have an account? <a href="signup.html">Sign up</a></p>
-        <p><a href="reset.html">Forgot password?</a></p>
+        <p><a href="#">Forgot password?</a></p>
       </div>
     </form>
   </div>
